ipad spacing issues

--- a/_sass/4-pages/_nav.sass
+++ b/_sass/4-pages/_nav.sass
@@ -74,10 +74,11 @@
 +media($mobile)
 
   #nav-list
+    margin-bottom: 20px
 
     li
       float: none
-      padding: 0 0 20px
+      padding: 0
 
   .home
     margin-top: 30px
